--- a/backend/composer.json
+++ b/backend/composer.json
@@ -7,7 +7,8 @@
   },
   "autoload": {
     "psr-4": {
-      "Multiverse\\PayrollBackend\\": "src/"
+      "Database\\": "src/Database/",
+      "Controllers\\": "src/Controllers/"
     }
   },
   "authors": [
@@ -21,5 +22,10 @@
     "allow-plugins": {
       "pestphp/pest-plugin": true
     }
+  },
+  "scripts": {
+    "test": "pest",
+    "test:unit": "pest --testsuite=Unit",
+    "test:feature": "pest --testsuite=Feature"
   }
 }
