--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,25 @@ services:
     networks:
       - multiverse-network
 
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: multiverse_backend
+    restart: unless-stopped
+    environment:
+      DB_HOST: db
+      DB_NAME: ${MYSQL_DATABASE:-multiverse_db}
+      DB_USER: ${MYSQL_USER:-multiverse_user}
+      DB_PASSWORD: ${MYSQL_PASSWORD:-multiverse_password}
+    volumes:
+      - ./backend:/var/www/html
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - multiverse-network
+
 volumes:
   db_data:
     driver: local
