Add employee API endpoints with REST routing

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -21,7 +21,29 @@ server {
         return 204;
     }
 
-    # API routes - proxy to PHP-FPM backend
+    # API routes
+    location ~ ^/api\.php(/.*)?$ {
+        fastcgi_pass backend:9000;
+        fastcgi_index api.php;
+        fastcgi_param SCRIPT_FILENAME $document_root/api.php;
+        include fastcgi_params;
+
+        fastcgi_param REQUEST_URI $request_uri;
+        fastcgi_param PATH_INFO $1;
+
+        # Timeouts
+        fastcgi_read_timeout 300;
+        fastcgi_send_timeout 300;
+        fastcgi_connect_timeout 300;
+
+        # Buffer settings
+        fastcgi_buffer_size 128k;
+        fastcgi_buffers 256 16k;
+        fastcgi_busy_buffers_size 256k;
+        fastcgi_temp_file_write_size 256k;
+    }
+
+    # PHP routes - proxy to PHP-FPM backend
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
