Update API routing for prettier endpoints

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -21,15 +21,14 @@ server {
         return 204;
     }
 
-    # API routes
-    location ~ ^/api\.php(/.*)?$ {
+    # API routes - rewrite /api/* to /api.php/*
+    location ~ ^/api(/.*)?$ {
         fastcgi_pass backend:9000;
         fastcgi_index api.php;
         fastcgi_param SCRIPT_FILENAME $document_root/api.php;
         include fastcgi_params;
 
-        fastcgi_param REQUEST_URI $request_uri;
-        fastcgi_param PATH_INFO $1;
+        fastcgi_param REQUEST_URI /api.php$1$is_args$args;
 
         # Timeouts
         fastcgi_read_timeout 300;
