Integrate Vue frontend with Docker and Nginx

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,8 +2,8 @@ server {
     listen 80;
     server_name localhost;
 
-    root /var/www/html/public;
-    index index.php index.html;
+    root /var/www/frontend;
+    index index.html;
 
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
@@ -21,11 +21,11 @@ server {
         return 204;
     }
 
-    # API routes - rewrite /api/* to /api.php/*
+    # API routes - proxy to PHP backend
     location ~ ^/api(/.*)?$ {
         fastcgi_pass backend:9000;
         fastcgi_index api.php;
-        fastcgi_param SCRIPT_FILENAME $document_root/api.php;
+        fastcgi_param SCRIPT_FILENAME /var/www/html/public/api.php;
         include fastcgi_params;
 
         fastcgi_param REQUEST_URI /api.php$1$is_args$args;
@@ -42,33 +42,9 @@ server {
         fastcgi_temp_file_write_size 256k;
     }
 
-    # PHP routes - proxy to PHP-FPM backend
-    location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass backend:9000;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        include fastcgi_params;
-
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-        fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
-
-        # Timeouts
-        fastcgi_read_timeout 300;
-        fastcgi_send_timeout 300;
-        fastcgi_connect_timeout 300;
-
-        # Buffer settings
-        fastcgi_buffer_size 128k;
-        fastcgi_buffers 256 16k;
-        fastcgi_busy_buffers_size 256k;
-        fastcgi_temp_file_write_size 256k;
-    }
-
-    # Serve static files
+    # Frontend - serve Vue app (SPA)
     location / {
-        try_files $uri $uri/ /index.php?$query_string;
+        try_files $uri $uri/ /index.html =404;
     }
 
     # Deny access to hidden files
@@ -76,11 +52,6 @@ server {
         deny all;
         access_log off;
         log_not_found off;
-    }
-
-    # Deny access to sensitive files
-    location ~ /\.(ht|env|git) {
-        deny all;
     }
 
     error_log /var/log/nginx/error.log;
