--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,7 @@ services:
       - "${APP_PORT:-9090}:80"
     volumes:
       - ./backend:/var/www/html
+      - ./frontend/dist:/var/www/frontend
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - backend
