Add SEED_DATA config and update service images

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ MYSQL_USER=multiverse_user
 MYSQL_PASSWORD=multiverse_password
 
 DB_HOST=localhost
+
+# DEVELOPMENT CONFIGURATION
+# Set to 'true' to load seed data for development and testing
+SEED_DATA=false
