--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: mariadb:latest
+    image: mariadb:11.6.2
     container_name: multiverse-payroll-db
     restart: unless-stopped
     environment:
@@ -8,6 +8,7 @@ services:
       MYSQL_DATABASE: ${MYSQL_DATABASE:-multiverse_db}
       MYSQL_USER: ${MYSQL_USER:-multiverse_user}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD:-multiverse_password}
+      SEED_DATA: ${SEED_DATA:-false}
     ports:
       - "${DB_PORT:-3307}:3306"
     volumes:
@@ -53,7 +54,7 @@ services:
       - multiverse-network
 
   nginx:
-    image: nginx:alpine
+    image: nginx:1.27.3-alpine
     container_name: multiverse_nginx
     restart: unless-stopped
     ports:
