--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: mariadb:11.6.2
+    image: mariadb:latest
     container_name: multiverse-payroll-db
     restart: unless-stopped
     environment:
@@ -14,6 +14,7 @@ services:
     volumes:
       - db_data:/var/lib/mysql
       - ./database/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
+      - ./database/seed:/seed
     healthcheck:
       test: ["CMD", "healthcheck.sh", "--connect", "--innodb_initialized"]
       interval: 10s
